# snakes-in-a-grid

./: 2_work-with-pandas.ipynb  2_work-with-pandas.slides.html  3_work-with-openpyxl.ipynb  4_excel-exports-tetris.xlsx  4_pyex-packages.xlsx  4_python_macros.xlsx  LICENSE  README.md  grid-snakes-python-excel.xlsx  main.py  pyproject.toml  requirements.txt  test.csv  test.xlsx  work-with-openpyxl.ipynb  work-with-pandas.ipynb
.devcontainer/: Dockerfile  devcontainer.json
sample-data/: iris-data-simple.xlsx  iris-data.xlsx  summer-sports.csv  summer-sports.ods  summer-sports.xlsx
sample-data/acnh-game-data/: acnh-fish.xlsx
sample-data/animal-crossing/: README.md
sample-data/board-games/: README.md
sample-data/summer-sports/: summer-sports.xlsx
sample_data/: acnh_fish.xlsx  iris-data.xlsx  test.xlsx
